[package]
name = "ripd"
version = "0.1.0"
authors = ["dougfort <doug.fort@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
prost = "0.6.1"
tonic = {version="0.2.1", features = ["tls"]}
tokio = {version="0.2.21", features = ["stream", "macros"]}
futures = "0.3"
log = "0.4.8"
env_logger = "0.7.1"

[build-dependencies]
tonic-build = "0.2.0"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"