[package]
name = "ripd"
version = "0.1.0"
authors = ["dougfort <doug.fort@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
prost = "0.10.4"
tonic = { version = "0.7.2", features = ["tls"] }
tokio = { version = "1.20.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3.21"
log = "0.4.17"
env_logger = "0.9.0"

[build-dependencies]
tonic-build = "0.7.2"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
